# Explainable-Deep-Neural-Networks

./: 2_Exp_KAGGLE_COVID_19_Drug_Discovery_Data.ipynb  DDH Data with Properties.csv  LICENSE  README.md  pyproject.toml  requirements.txt
docs/images/: .gitkeep
notebooks/: 01_Basic_Analysis.ipynb
src/neural_topology/: __init__.py
src/neural_topology/core/: analyzer.py  mapper.py  persistence.py
src/neural_topology/examples/: covid_drug_analysis.py
src/neural_topology/neural/: extractors.py
